@@ -12,6 +12,8 @@ Version 2.2.5
         gtk 2.10?; this bug was reported by Sebastian Breier as #1621270)
    - Bugfix: Handling of the "delete-event" in the about dialog
    - Added Sebastian Breier to contributors
+   - Bugfix: Determining initial image size (thanks to Felipe Csaszar for
+        reporting this bug)
 
 Version 2.2.4		2006-12-10 19:47
  * Robert Sowada
